implementando o no controller de Order o metodo patch StatusOrder

--- a/src/main/resources/exception.properties
+++ b/src/main/resources/exception.properties
@@ -3,3 +3,5 @@ FIELD_ID_NOT_FOUND=Field id not found.
 CAUSE_FIELD_ID_NOT_FOUND=This is does not exist in the database.
 EMPTY_LIST=Empty list.
 CAUSE_EMPTY_LIST=Unable to fetch an empty list.
+ORDER_NOT_FOUND=Order not found.
+CAUSE_ORDER_NOT_FOUND=Order not found in database.
