implementando o bean validation

--- a/src/main/resources/exception.properties
+++ b/src/main/resources/exception.properties
@@ -5,3 +5,5 @@ EMPTY_LIST=Empty list.
 CAUSE_EMPTY_LIST=Unable to fetch an empty list.
 ORDER_NOT_FOUND=Order not found.
 CAUSE_ORDER_NOT_FOUND=Order not found in database.
+INVALID_FIELD=Fill in all the fields, it cannot have an empty or null field.
+CAUSE_INVALID_FIELD=Some field passed is null or empty. 
